--- a/Front end/register.html
+++ b/Front end/register.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font -->
     <style>
       @import url("https://fonts.googleapis.com/css?family=Karla:400,700&display=swap");
@@ -77,6 +77,18 @@
               />
             </div>
 
+            <div class="flex flex-col pt-4">
+              <label class="text-lg">Password</label>
+              <input
+                type="text"
+                id="password_2"
+                name="password_2"
+                placeholder="Confirm Password"
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"
+                value="<?php echo $password_2; ?>"
+              />
+            </div>
+
             <input
               type="submit"
               value="Register"
@@ -102,14 +114,14 @@
       <div class="w-1/2 shadow-2xl">
         <img
           class="object-cover w-full h-screen hidden md:block"
-          src="../img/registerbg.png"
+          src="img/registerbg.png"
           alt="Background"
         />
       </div>
     </div>
   </body>
   <!-- For Particle -->
-  <script src="../js/particle-animation.js"></script>
+  <script src="js/particle-animation.js"></script>
   <!-- For Custom Alert Box-->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <?php  if (isset($_SESSION['status'])) : ?>
