Fix Upload Limit files

--- a/Front end/dashboard.html
+++ b/Front end/dashboard.html
@@ -424,7 +424,7 @@
 
                 <div class="lg:w-full  flex justify-center items-center">
                     <div class="pb-16">
-                        <img class=" lg:max-w-2xl max-h-xl " src="./assets/img/dash.svg" alt="Research">
+                        <img class=" lg:max-w-2xl max-h-xl dark:opacity-50" src="./assets/img/dash.svg" alt="Research">
                     </div>
                 </div>
             </main>
