--- a/Front end/All_items.html
+++ b/Front end/All_items.html
@@ -36,7 +36,7 @@
                     </a>
                 </div>
                 
-                <ul class="mt-2">
+                <!-- <ul class="mt-2">
                     <li class="relative px-6 py-3 border-b">
                         <a class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
                             href="home.html">
@@ -49,7 +49,7 @@
                             <span class="ml-4">Home</span>
                         </a>
                     </li>
-                </ul>
+                </ul> -->
                 <ul class="mt-6">
                     <li class="relative px-6 py-3 border">
                         <a class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
