--- a/Front end/user.dashboard.html
+++ b/Front end/user.dashboard.html
@@ -41,7 +41,7 @@
                     <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg"
                     aria-hidden="true"></span>
                     <a class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
-                        href="dashboard.html">
+                        href="user.dashboard.html">
                         <svg class="w-5 h-5 text-purple-600" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -55,14 +55,14 @@
             <ul class="">
                 <li class="relative px-6 py-3 border-b">
                     <a class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
-                        href="dashboard.html">
+                        href="user.post.html">
                         <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M2.25 7.125C2.25 6.504 2.754 6 3.375 6h6c.621 0 1.125.504 1.125 1.125v3.75c0 .621-.504 1.125-1.125 1.125h-6a1.125 1.125 0 01-1.125-1.125v-3.75zM14.25 8.625c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v8.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-8.25zM3.75 16.125c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v2.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-2.25z" />
                         </svg>
 
-                        <span class="ml-4 ">Users</span>
+                        <span class="ml-4 ">My Posts</span>
                     </a>
                 </li>
             </ul>
@@ -284,7 +284,7 @@
                 <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200"> Welcome!! Lost</h2>
                 <div class="grid h-auto md:grid-cols-2  xl:grid-cols-2 gap-6  hover:cursor-pointer">
                     <!--Start of Cards-->
-                    <a href="Lost.html">
+                    <a href="user.lost.html">
                         <div class="flex items-center h-32 border p-4  rounded-lg shadow-xl dark:bg-gray-800">
                                 <div class="p-3 mr-4 text-green-500 bg-green-100 rounded-full dark:text-green-100 dark:bg-green-500">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -304,7 +304,7 @@
                         </div>
                     </a>
                     <!-- Card -->
-                    <a href="Found.html">
+                    <a href="user.found.html">
                         <div class="flex items-center h-32 border p-4 bg-white rounded-lg shadow-xl dark:bg-gray-800">
                             <div
                                 class="p-3 mr-4 text-blue-500 bg-blue-100 rounded-full dark:text-blue-100 dark:bg-blue-500">
