--- a/Front end/All_items.html
+++ b/Front end/All_items.html
@@ -609,6 +609,7 @@
                 </tbody>
               </table>
             </div>
+        </div>
           </main>
         </div>
     </div>
